--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commandbar": "^1.8.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.1"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
